[project]
name = "e2e-automation-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.45",
    "fastapi[standard]>=0.115.12",
    "langchain-openai>=0.3.11",
    "pillow>=11.2.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
